Assistant checkpoint: Fix overlapping div heights
Assistant generated file changes:
- style.css: Fix overlapping div heights

---

User prompt:

it cut each other height

--- a/style.css
+++ b/style.css
@@ -29,11 +29,11 @@ height: 100vh;
   margin-left: 5px;
 }
 .web-intro{
-  height:2500px;
+  height: 1500px;
   border: 1px solid black;
 }
 .quotes{
-  height: 2000px;
+  height: 700px;
   border: 1px solid black;
   display: flex;
   justify-content: space-around;
